# polychrom

./: .gitignore  PIPELINE_CONFIG_SCHEME.md  README.md  environment-openmm.yml  pyproject.toml  requirements.txt  run_panels.sh  setup.py
analysis_scripts/: panel_c.sh  panel_d.sh  run_panels.sh
configs/: CONFIG_EXPLANATIONS.md  biophysical.yaml  biophysical_calibrated.yaml  config1.yaml  config1_10k.yaml  config1_10k_2.yaml  config1_20k.yaml  config1_5k.yaml  config1_long.yaml  config1_real.yaml  config1_small.yaml  config2.yaml  config2_10k.yaml  config2_10k_2.yaml  config2_20k.yaml  config2_5k.yaml  config2_5k_realistic.yaml  config2_long.yaml  config2_mild.yaml  config2_real.yaml  config2_small.yaml  config3.yaml  config3_10k.yaml  config3_10k_2.yaml  config3_20k.yaml  config3_5k.yaml  config3_long.yaml  config4.yaml  config4_10k.yaml  config4_10k_2.yaml  config4_20k.yaml  config4_5k.yaml  config4_long.yaml  monomer_ratios_10k.npy  postUV.yaml  postaux.yaml  preUV.yaml  preaux.yaml
docs/: conf.py  index.rst
polychrom/: __init__.py  __polymer_math.cpp  contactmaps.py  hdf5_format.py  polymer_analyses.py  polymerutils.py
scripts/: cis_decay_sim.py  cohesin_rnapii_coupling.py  compare4_loops_1d.py  compare_config_chain_metrics.py  compare_corner_ctcf_1d.py  compare_degron_control.py  compare_looplen_1d.py  config2_vs_config1_swarm.py  contact_cutoff_sweep.py  gen_cohesin_barrier_eval.py  gen_combined_loop_stall_panels.py  gen_lesion_grid_and_heatmaps.py  gen_lesion_timing_grids.py  gen_long_configs.py  gen_loop_vs_typea_spacing_panel.py  gen_realistic_configs.py  (+27 more)
(+108 files in other folders)
